<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReadQuran"
    android:orientation="vertical">

    <TextView
        android:id="@+id/read_arabic_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Arabic_Text"
        android:textAlignment="viewEnd"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/read_urdu_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/Urdu_Text"
        android:textAlignment="viewEnd"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/read_english_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/English_text"
        android:textSize="24sp" />
</LinearLayout>

